--- a/Home.css
+++ b/Home.css
@@ -19,4 +19,12 @@
     margin-bottom: -150px;
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 }
+.home__image2{
+    width: 96%;
+    z-index: -1;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    
+}
 
