--- a/Product.css
+++ b/Product.css
@@ -14,6 +14,7 @@
 
 .product__rating{
     display: flex;
+    align-content: center;
 }
 .product > img {
     max-height: 200px;
@@ -36,7 +37,9 @@
 
 .product__info{
     height: 100px;
-    margin-bottom: 15px;    
+    margin-bottom: 15px; 
+    text-align: center;
+       
 }
 
 
